tests/NormalTests/paczka1/small_fuzzy/27945214.err
Error in line 1: qQW6tF A828 55,5
Error in line 5: 6Xw2xj A783 74,1
Error in line 6: Wgr3Xq A201 66,9
Error in line 12: A783 A783 25,3
